# weavehacks3

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  orval.config.ts  pyproject.toml  verify.sh
.claude/: settings.json
.config/: pre-commit-config.yaml
backend/: config.py  main.py  pyproject.toml  requirements.txt  run_eval.py
backend/api/: __init__.py  games.py  players.py  routes.py  series.py
backend/db/: __init__.py  crud.py  database.py  models.py  redis_cache.py
backend/game/: __init__.py  evaluation.py  human_adapter.py  llm.py  orchestrator.py  prompts.py  reflection.py  runner.py  tts.py  voice_runner.py
backend/models/: __init__.py  protocols.py  schemas.py
backend/pipecat/: pipeline.py
backend/tests/: test_model_provider.py
backend/voice_pipeline/: __init__.py  pipeline.py
backend/websocket/: __init__.py  manager.py  voice_session.py
docs/: project-code-requirements.md
docs/api-contracts/: openapi.md
docs/api-contracts/json-examples/: README.md  _example-run-walkthrough.jsonc  agentloop-memory.jsonc  agentloop-messages.jsonc  agentloop-state.jsonc  langgraph-checkpoint.jsonc  langgraph-memory-item.jsonc  langgraph-state.jsonc  weave-call.jsonc  weave-dataset.jsonc  weave-evaluation.jsonc  weave-model.jsonc  weave-object.jsonc
docs/contracts/: langgraph-state.md  llm-providers.md  project-code-requirements.md  weave-integration.md
docs/domains/: agent-loop.md  feedback.md  memory.md
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: api.ts  types.ts  voice.ts  websocket.ts
frontend/src/lib/components/: ChatLog.svelte  CheatsheetDiffModal.svelte  CheatsheetTooltip.svelte  GameStateDiagram.svelte  HumanActionPanel.svelte  PhaseIndicator.svelte  PlayerSeat.svelte  RoundTable.svelte  SpeechBubble.svelte  VoiceControls.svelte  VoteArrow.svelte  VoteBadge.svelte  VoteBadgeCluster.svelte
frontend/src/lib/styles/: noir-theme.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/series/[id]/: +page.svelte
src/agent_loop/: __init__.py
src/agent_loop/adapters/: __init__.py
src/agent_loop/adapters/llm/: __init__.py  factory.py
src/agent_loop/adapters/memory/: __init__.py  weave_memory.py
src/agent_loop/adapters/tools/: __init__.py
src/agent_loop/api/: __init__.py  exception_handlers.py  main.py
src/agent_loop/api/routes/: __init__.py
src/agent_loop/api/routes/v1/: __init__.py  health.py  loop.py
src/agent_loop/application/: __init__.py  agent.py
src/agent_loop/domain/: __init__.py  exceptions.py
src/agent_loop/domain/models/: __init__.py  memory.py
src/agent_loop/domain/ports/: __init__.py  memory_store.py
src/agent_loop/graph/: __init__.py  nodes.py  orchestrator.py  prompts.py  state.py
src/agent_loop/mcp/: __init__.py  exception_handlers.py  server.py
tests/: test_agent.py  test_architecture.py  test_orchestrator.py
