[project]
name = "agent-loop"
version = "0.1.0"
description = "Self-improving agentic abstraction with Weave observability and LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "William Callahan" }]
keywords = ["agent", "llm", "weave", "langgraph", "ai"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "weave>=0.51.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
agent-loop = "agent_loop.api.main:main"
agent-loop-mcp = "agent_loop.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loop"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "C90",    # mccabe complexity
    "PL",     # pylint (includes many clean code rules)
    "T20",    # flake8-print (no print statements)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # Too many arguments (we defer to domain needs)
]

[tool.ruff.lint.isort]
known-first-party = ["agent_loop"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as async",
]

[tool.ty.environment]
# ty configuration for Python type checking
python-version = "3.11"

[dependency-groups]
dev = [
    "prek>=0.3.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.2",
    "ruff>=0.9.0",
    "ty>=0.0.14",
]
