[project]
name = "mafia-ace"
version = "0.1.0"
description = "AI agents playing Mafia with self-improving cheatsheets"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    # Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # AI providers
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",
    # Observability
    "weave>=0.50.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "db", "game", "models", "websocket"]
