[project]
name = "mafia-ace"
version = "0.1.0"
description = "AI agents playing Mafia with self-improving cheatsheets"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    # Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # AI providers
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",
    # Observability
    "weave>=0.50.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "db", "game", "models", "websocket"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "C90",    # mccabe complexity
    "PL",     # pylint (includes many clean code rules)
    "T20",    # flake8-print (no print statements)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "PLR0913", # Too many arguments (we defer to domain needs)
    "PLC0415", # import not at top-level (needed for circular import workarounds)
]

[tool.ruff.lint.per-file-ignores]
# CLI entry points can use print and have many statements
"main.py" = ["T201", "E402", "ARG001"]  # E402: imports after sys.path setup
"run_eval.py" = ["T201", "PLR0915"]  # PLR0915: many statements in CLI main
# Unused args in FastAPI dependencies and Weave ops are intentional
"api/routes.py" = ["ARG001"]
"game/orchestrator.py" = ["ARG001"]
# Evaluation has complex transcript formatter and unused kwargs for Weave Model interface
"game/evaluation.py" = ["ARG001", "ARG002", "C901", "PLR0912", "C401"]
# Runner uses print for error logging (fallback behavior notification)
"game/runner.py" = ["T201", "SIM108"]  # SIM108: if/else more readable than ternary here
# TTS uses print for error logging
"game/tts.py" = ["T201"]
# WebSocket manager has intentional try/except/pass for connection handling
"websocket/manager.py" = ["SIM105", "SIM103", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["api", "db", "game", "models", "websocket"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    # Weave uses deprecated sentry_sdk.Hub
    "ignore:.*sentry_sdk\\.Hub.*is deprecated.*",
    # Weave uses deprecated logger.warn()
    "ignore:.*The 'warn' method is deprecated.*:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
